spectec/test/elab/neg/type-variant-mixop-collision.t
  $ ./main.exe type-variant-mixop-collision.spectec 2>&1
  error: variant cases are ambiguous: `FOO %`
    --> type-variant-mixop-collision.spectec:5:1
    |
  5 |   | FOO nat
    | ^^^^^^^^^^^
    | ...
    = source: elab
  [1]
